WIP: Add error-prone
// FIXME: do not activate by default
// FIXME: add an issue

Change-Id: Ie8f4b80d2f77dc7b073e194c2e417b60517ad1ba
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>